--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "dom-to-image": "^2.6.0",
+    "dom-to-image-more": "^3.5.0",
     "framer-motion": "^10.18.0",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "next": "^14.0.3",
+    "playwright": "^1.51.1",
+    "puppeteer": "^24.6.0",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
